feat: リストの間隔修正いたしました。”

--- a/src/App.css
+++ b/src/App.css
@@ -12,10 +12,13 @@
   border: 1px solid gray;
   border-radius: 5px;
   padding: 5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 .movie .movieImage {
   width: 150px;
+  
 }
 
 .movie .movieTitle {
