--- a/src/App.css
+++ b/src/App.css
@@ -1,36 +1,28 @@
 .App {
-  padding: 20px;
+  font-size: 18px;
 }
 
-.appTitle {
-  font-size: 36px;
-  text-align: center;
-}
-
-.movie {
-  display: flex;
+.movieTitle {
+  display: block;
   border: 1px solid gray;
   border-radius: 5px;
-  padding: 5px;
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-
-.movie .movieImage {
-  width: 150px;
-}
-
-.movie .movieTitle:hover {
-  background-color: gray;
-}
-
-.movie .movieTitle {
-  flex-grow: 1;
-  text-decoration: none;
+  width: 500px;
   color: black;
+  text-decoration: none;
 }
 
-.movie .movieYear {
-  font-size: 0.5rem;
+.movieTitle:hover {
+  background: gray;
+}
+
+.good {
+  color: blue;
+}
+
+.soso {
+  color: green;
+}
+
+.bad {
   color: red;
 }
