feat: movie image border

--- a/src/components/MovieList/style.css
+++ b/src/components/MovieList/style.css
@@ -8,6 +8,10 @@
     text-decoration: none;
   }
   
+  .movieImage {
+    border: 1px solid gray;
+    border-radius: 5px;
+  }
   .movieTitle:hover {
     background: gray;
   }
